Adding gitignore changes

--- a/projects/02_trivia_api/starter/.gitignore
+++ b/projects/02_trivia_api/starter/.gitignore
@@ -1,6 +1,15 @@
 .vscode
 __pycache__
 venv
+frontend/node_modules/ajv 
+frontend/node_modules/css-tree 
+frontend/node_modules/csso 
+frontend/node_modules/detect-port-alt 
+frontend/node_modules/extglob 
+frontend/node_modules/micromatch 
+frontend/node_modules/w3c-hr-time 
+frontend/node_modules/workbox-precaching
+frontend/node_modules/*
 
 # OS generated files #
 ######################
@@ -11,3 +20,4 @@ venv
 .Trashes
 ehthumbs.db
 Thumbs.db
+
